[gd_scene load_steps=6 format=2]

[ext_resource path="res://Import/Weapon/Sword/Sword_1/5.png" type="Texture" id=1]
[ext_resource path="res://Import/Weapon/ico_ect_set1.png" type="Texture" id=2]
[ext_resource path="res://Script/weapon.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "on_click"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MarginContainer" type="MarginContainer"]
margin_left = 480.0
margin_right = 544.0
margin_bottom = 64.0
mouse_filter = 1
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 57.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/on_click = SubResource( 2 )

[connection signal="on_click" from="." to="." method="_on_MarginContainer_on_click"]
